# universities_scrapy

./: .env.example  .gitignore  hello.py  output.json  pyproject.toml  run_spiders.py  scrapy.cfg
universities_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
universities_scrapy/spiders/: acu_spider.py  adelaide_spider.py  anu_spider.py  avondale_spider.py  bond_spider.py  canberra_spider.py  cdu_spider.py  cqu_spider.py  csu_spider.py  curtin_spider.py  deakin_spider.py  demo_lawyers.py  divinity_spider.py  ecu_spider.py  ecu_test.py  federation_spider.py  flinders_spider.py  griffith_spider.py  jcu_spider.py  latrobe_spider.py  monash_spider.py  mq_spider.py  murdoch_spider.py  newcastle_spider.py  notredame_spider.py  qut_spider.py  rmit_spider.py  scu_spider.py  swinburne_spider.py  sydney_spider.py  torrens_spider.py  une_spider.py  unimelb_spider.py  unisa_spider.py  unisq_spider.py  unsw_spider.py  uow.py  uow_spider.py  uq_spider.py  usc_spider.py  (+5 more)
universities_scrapy/universities_scrapy/: griffith_data.json  items.py  pipelines.py  settings.py
universities_scrapy/universities_scrapy/spiders/: anu_spider.py  books.py  demo_books.py  ecu_spider.py  griffith_spider.py  lawyers.py
