[project]
name = "universities-scrapy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "scrapy-selenium>=0.0.7",
    "scrapy>=2.11.2",
    "selenium==4.9",
    "cloudscraper>=1.2.71",
]

[dependency-groups]
dev = []
